# rendertoy2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RenderToy2.cpp  accelerate.cpp  accelerate.h  bbox.cpp  bbox.h  bxdf.cpp  bxdf.h  camera.cpp  camera.h  color.cpp  color.h  composition.cpp  composition.h  dotfont.cpp  dotfont.h  fresnel.cpp  fresnel.h  importer.cpp  importer.h  integrater.cpp  integrater.h  intersectinfo.cpp  intersectinfo.h  light.cpp  light.h  logger.h  material.cpp  material.h  medium.cpp  medium.h  microfacet.cpp  microfacet.h  phase.cpp  phase.h  primitive.cpp  primitive.h  (+16 more)
executable/: CMakeLists.txt  alpha.cpp  cornellbox.cpp  desert_morning.hdr  final1.cpp  final2.cpp  flora_test.mtl  fog.cpp  hdri.cpp  main.cpp  voltest.cpp
